Update project to Java 17 and update dependencies