@@ -1,1 +1,8 @@
 -Xmx128m
+--add-opens java.base/java.lang=ALL-UNNAMED
+--add-opens java.base/java.nio=ALL-UNNAMED
+--add-opens java.base/java.io=ALL-UNNAMED
+--add-opens java.base/java.util=ALL-UNNAMED
+--add-opens java.base/java.util.concurrent=ALL-UNNAMED
+--add-opens java.base/sun.net.www.protocol.http=ALL-UNNAMED
+--add-opens java.base/sun.nio.ch=ALL-UNNAMED
